high contrast dropdown bug fixed

--- a/src/api-explorer.css
+++ b/src/api-explorer.css
@@ -192,6 +192,12 @@ body {
      /*visibility: visible;*/
 }
 
+@media (-ms-high-contrast) {
+    md-backdrop{
+        background-color: transparent;
+    }
+} 
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
